[gd_scene load_steps=2 format=3 uid="uid://dmvw3w6d3ctna"]

[ext_resource type="Script" uid="uid://be72xmjfuwxk3" path="res://scripts/launcher_native.gd" id="1"]

[node name="Launcher" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Header" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
offset_right = 896.0
offset_bottom = 80.0

[node name="GameTitle" type="Label" parent="Header"]
layout_mode = 2
text = "GIGABUH v.0.0.1"

[node name="ActualVersionLabel" type="Label" parent="Header"]
layout_mode = 2
text = "Актуальная версия - "

[node name="InstalledVersionLabel" type="Label" parent="Header"]
layout_mode = 2
text = "Установленная версия - "

[node name="PlayBtn" type="Button" parent="."]
custom_minimum_size = Vector2(160, 48)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -194.0
offset_top = -96.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
text = "▶ Играть"

[node name="CommunityBtn" type="Button" parent="."]
layout_mode = 0
offset_top = 511.0
offset_right = 152.0
offset_bottom = 600.0
text = "Сообщество"

[node name="SettingsBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -272.5
offset_top = -91.0
offset_right = -81.5
grow_horizontal = 2
grow_vertical = 0
text = "Настройки"

[node name="NewsPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 96.0
offset_right = 880.0
offset_bottom = 472.0

[node name="NewsLabel" type="Label" parent="NewsPanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 200.0
offset_bottom = 39.0
text = "Последние обновления"

[node name="LastNewsPanel" type="Panel" parent="NewsPanel"]
layout_mode = 0
offset_left = 56.0
offset_top = 56.0
offset_right = 792.0
offset_bottom = 352.0

[node name="LastUpdateLabel" type="Label" parent="NewsPanel/LastNewsPanel"]
layout_mode = 0
offset_left = 272.0
offset_top = 16.0
offset_right = 392.0
offset_bottom = 40.0
